--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,8 @@
 /* de main styles van de website */
+::selection {
+    color: white;
+    background: black;
+  }
 
 *{
     padding: 0px;
@@ -7,16 +11,48 @@
 }
 
 header{
-    padding: 20px;
+    padding: 10px;
+    
+}
+@media screen and (max-width: 750px) {
+    .logoTekst {
+     display: none;
+    }
+}
+  
+.headerContent{
+    display: grid;
+    grid-template-columns: auto auto;
     background-color: rgb(140, 140, 140);
-    height: 300px;
+    height: 200px;
 }
 
-.headerInfo{
+.logoBox{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: min-content;
+    width: max-content;
+    cursor: pointer;
+}
+
+.logo{
+    height: 100px;
+}
+.logoTekst{
+    color: transparent;
+    font-weight: 900;
+    font-size: 40px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-text-stroke: 2px black;
+}
+
+.headerNav{
     display: flex;
     text-align: center;
     flex-direction: row;
-    float: right;
+    margin-left: auto;
+    height: min-content;
 }
 
 .user_acc{
@@ -28,10 +64,26 @@ header{
     justify-content: center;
     text-align: center;
     overflow: hidden;
+    cursor: pointer;
 }
 .personIcon{
     width: 50%;
 }
-.logo{
 
+.filter{
+    grid-column: 1/3;
+    display: flex;
+    justify-content: center;
+}
+button,input{
+    cursor: pointer;
+}
+
+
+main{
+    align-items: center;
+}
+.mainContent{
+    display: flex;
+    align-items: center;
 }
