--- a/src/css/header.css
+++ b/src/css/header.css
@@ -22,7 +22,7 @@ header{
 .headerContent{
     display: grid;
     grid-template-columns: auto auto;
-    height: 200px;
+    height: max-content;
 }
 
 .logoBox{
@@ -32,11 +32,12 @@ header{
     align-items: center;
     height: min-content;
     width: max-content;
-    cursor: pointer;
 }
 
 .logo{
     height: 100px;
+    cursor: pointer;
+    
 }
 .logoTekst{
     color: transparent;
@@ -74,7 +75,8 @@ header{
     text-align: center;
     overflow: hidden;
     cursor: pointer;
-    transition: 1s;
+    transition: .5s;
+    z-index: 2;
 }
 
 .listUserOptions:last-child{
@@ -93,6 +95,7 @@ ul{
 }
 .open{
     height: 200px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .usericonbox{
