--- a/src/css/plaatsadvertentie.css
+++ b/src/css/plaatsadvertentie.css
@@ -1,22 +1,42 @@
 main{
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: calc(100vh - 120px); */
+    padding: 50px;
 }
-
+header{
+    position: sticky;
+}
 .uploadAdvertentieBox{
     display: grid;
     grid-template-columns: auto auto;
+    gap: 50px;
 }
 
 
 .imgBox{
-    height: 100%;
+    height: max-content;
+    padding: 10px;
     width: 100%;
-    border: 2px dashed black;
+    border: 2px dashed lightgray;
     border-radius: 3px;
     cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: rgb(146, 146, 146);
+}
+
+#uploadFile{
+    opacity: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 
 .imgSlider{
@@ -30,18 +50,149 @@ main{
 
 .imgSlider{
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     width: 100%;
+    gap: 5px;
 }
 
 .uploadImgBox{
     width: 400px;
-    height: 400px;
+    height: max-content;
+    display: grid;
+    grid-template-rows: auto auto;
+    gap: 5px;
 }
 
-.imageSkeleton{
-    height: 50px;
-    width: 50px;
-    background-color: lightGray;
+.tile {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    border: 1px solid lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.tile span {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20px;
+    height: 20px;
+    padding: 1px;
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 100px;
+    color: white;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+}
+
+.gradient {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+}
+
+.deleteBtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 25px;
+    height: 25px;
+    border-radius: 100%;
+    border: none;
+    padding: 5px;
+    
+    position: absolute;
+    left: 2px;
+    top: 2px;
+}
+.advertentieImg{
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+.inputform{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: repeat(5, auto);
+    gap: 10px;
+}
+.inputbox{
+    padding: 20px;
+    background-color: rgb(233, 233, 233);
+    border-radius: 20px;
+    outline: 1px solid rgb(200, 200, 200);
+    overflow-y: hidden;
 
 }
+.TopOfBox{
+    padding-top: 20px;
+    z-index: 1;
+    background-color: rgb(233, 233, 233);
+    top: -20px;
+    position: relative;
+}
+.categoriënbox {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    /* background-color: rgb(233, 233, 233); */
+    height: auto;
+    overflow: hidden;
+    transform: translateY(-120%);
+    transition: transform 0.5s; /* Voeg een overgang toe */
+}
+
+.categoriënboxopen {
+    transform: translateY(0%);
+}
+
+
+.categoriënbox > div{
+    padding: 5px;
+    border: 1px solid black;
+    background-color: none;
+    display: inline-block;
+    height: min-content;
+    cursor: default;
+}
+.arrowIcon{
+    height: 10px;
+    transition: .5s;
+}
+.animation{
+    transform: rotate(180deg);
+
+}
+.inputbox:last-of-type{
+    width: 500px;
+    grid-column: 2;
+    grid-row: 2/5;
+}
+
+input,textarea{
+    width: auto;
+    float: right;
+    width: 200px;
+}
+
+textarea{
+    width: 100%;
+    height: 100%;
+    resize: none; 
+}
+
