--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,105 +10,24 @@
     box-sizing: border-box;
 }
 
-header{
-    padding: 10px;
-    background-color: rgb(140, 140, 140);
-    
-}
-@media screen and (max-width: 750px) {
-    .logoTekst {
-     display: none;
-    }
-}
-  
-.headerContent{
-    display: grid;
-    grid-template-columns: auto auto;
-    height: 200px;
+body{
+    min-height: 100vh;
 }
 
-.logoBox{
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: center;
-    height: min-content;
-    width: max-content;
-    cursor: pointer;
+input, textarea{
+    border: 1px solid black;
+    padding: 5px;
+}
+input:focus, textarea:focus{
+    outline: none;
 }
 
-.logo{
-    height: 100px;
-}
-.logoTekst{
-    color: transparent;
-    font-weight: 900;
-    font-size: 40px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    -webkit-text-stroke: 2px black;
-}
-
-.headerNav{
-    display: flex;
-    text-align: center;
-    flex-direction: row;
-    margin-left: auto;
-    height: 30px
-}
-
-.user_acc{
-    height: 70px;
-    width: 70px;
-    background-color: white;
-    border-radius: 100px;
-    text-align: center;
-    overflow: hidden;
-    cursor: pointer;
-    transition: .5s;
-}
-.listUserOptions:last-child{
-    border-bottom: 1px solid black;
-}
-.useroption{
-    text-align: center;
-    padding: 10px 0px 10px 0px;
-    border-top: 1px solid black;
-}
-.useroption:hover{
-    background-color: lightgray;
-}
-ul{
-    list-style:none;
-}
-.open{
-    height: 200px;
-}
-
-.usericonbox{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-
-.personIcon{
-    width: 50%;
-}
-
-.filter{
-    grid-column: 1/3;
-    display: flex;
-    justify-content: center;
-}
-
-button,input{
-    cursor: pointer;
-}
-
-
-main{
-    align-items: center;
-}
-.mainContent{
-    display: flex;
-    align-items: center;
-}
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
