--- a/src/css/plaatsadvertentie.css
+++ b/src/css/plaatsadvertentie.css
@@ -128,41 +128,93 @@ header{
 .inputform{
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(3, auto);
     gap: 10px;
+    height: min-content;
 }
 .inputbox{
     padding: 20px;
+    display: grid;
+    grid-template-columns: 40% auto;
+    height: min-content;
+    align-items: center;
+    gap: 10px;
     background-color: rgb(233, 233, 233);
-    border-radius: 20px;
+    border-radius: 10px;
     outline: 1px solid rgb(200, 200, 200);
     overflow-y: hidden;
+    width: 100%;
+    position: relative;
 
 }
+.verplicht{
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    font-size: small;
+    color: rgb(175, 175, 175);
+    z-index: 10;
+}
+.inputbox input{
+    width: 100%;
+
+}
+
+.prijsbox input{
+    padding-left: 20px;
+    align-items: center;
+}
+
+.prijsbox div{
+    position: relative;
+}
+.prijsbox div span{
+    z-index: 9;
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translate(0%, -50%);
+}
+
+
+
+.categorieënInput{
+    display: block;
+    max-height: 100%;
+    transition: .5s;
+}
+
 .TopOfBox{
+    grid-column: 1/ 3;
     padding-top: 20px;
     z-index: 1;
     background-color: rgb(233, 233, 233);
     top: -20px;
     position: relative;
+    z-index: 3;
 }
+
 .categoriënbox {
+    grid-column: 1/3;
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
     gap: 5px;
     /* background-color: rgb(233, 233, 233); */
-    height: auto;
+    height: 0px;
     overflow: hidden;
-    transform: translateY(-120%);
-    transition: transform 0.5s; /* Voeg een overgang toe */
+    transform: translateY(-200%);
+    transition: .5s;
 }
 
 .categoriënboxopen {
+    transition: .5s;
     transform: translateY(0%);
+    height: auto;
 }
 
 
-.categoriënbox > div{
+.categoriënbox div,.selectedCategorieën div{
     padding: 5px;
     border: 1px solid black;
     background-color: none;
@@ -170,6 +222,8 @@ header{
     height: min-content;
     cursor: default;
 }
+
+
 .arrowIcon{
     height: 10px;
     transition: .5s;
@@ -178,21 +232,55 @@ header{
     transform: rotate(180deg);
 
 }
-.inputbox:last-of-type{
-    width: 500px;
+.beschrijfingsbox{
     grid-column: 2;
-    grid-row: 2/5;
-}
-
-input,textarea{
-    width: auto;
-    float: right;
-    width: 200px;
+    grid-row: 2/4;
+    height: 100%;
+    grid-template-columns: auto;
+    grid-template-rows: min-content auto;
+    align-items: start;
+    gap: 2px;
 }
 
 textarea{
-    width: 100%;
+    width: 300px;
     height: 100%;
     resize: none; 
 }
 
+@media screen and (max-width: 1250px){
+
+    .uploadImgBox{
+        margin: auto;
+    }
+    .uploadAdvertentieBox{
+        grid-template-columns: auto;
+        margin: auto;
+        gap: 50px;
+    }
+
+}   
+
+
+@media screen and (max-width: 900px){
+    .inputform{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, auto);
+    }
+    .categorieënInput{
+        grid-column: 1;
+
+    }
+    .beschrijfingsbox{
+        grid-column: 1;
+        grid-row: 5;
+    }
+    
+}   
+
+@media screen and (max-width: 450px){
+    .uploadImgBox{
+        width: 350px;
+    }
+}   
