--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,28 +1,20 @@
-.navbar {
-    background-color: #79899afa;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-#s{
-    padding: 1%;
-}
-
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f0f0f0;
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: min-content auto;
+}
+.mainPageContent{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    height: 100%;
+    width: 100%;
 }
-
 .login-container {
     width: 100%;
+    height: max-content;
     max-width: 400px;
     padding: 20px;
     background-color: #ffffff;
@@ -53,7 +45,7 @@ body {
     box-sizing: border-box;
 }
 
-button {
+.login-container button {
     width: 100%;
     padding: 10px;
     background-color: #79899afa;
@@ -64,7 +56,7 @@ button {
     font-size: 16px;
 }
 
-button:hover {
+.login-container button:hover {
     background-color: #98abc0fa;
 }
 
