--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -1,10 +1,4 @@
-a {
-  color: black;
-  text-decoration: none;
-}
-
 body {
-  margin: 0;
   font-family: Arial, sans-serif;
   background-color: #888;
 }
@@ -37,7 +31,7 @@ header {
 }
 
 .container.menu-open header {
-  opacity: 0; /* Hide header content when menu is open */
+  opacity: 0;
 }
 
 .title {
@@ -68,6 +62,8 @@ header {
 }
 
 .chat-window {
+  width: 100vh;
+  height: 95vh;
   background-color: #e0e0e0;
   display: flex;
   flex-direction: column;
@@ -75,7 +71,8 @@ header {
 
 .chat-header {
   background-color: #999;
-  padding: 10px;
+  padding: 20px;
+  text-align: center;
 }
 
 .chat-content {
@@ -83,40 +80,43 @@ header {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  gap: 10px; 
+  gap: 10px;
 }
 
 .chat-bubble {
   width: 200px;
-  height: 100px;
+  height: auto;
   background-color: #000;
-  border-radius: 0px 50px 50px 50px; 
-  align-self: flex-start; 
-  color: white; 
+  border-radius: 0px 50px 50px 50px;
+  align-self: flex-start;
+  color: white;
   padding: 10px;
   display: flex;
   align-items: center;
+  word-wrap: break-word;
 }
 
 .chat-bubble2 {
   width: 200px;
-  height: 100px;
+  height: auto;
   background-color: #000;
   border-radius: 50px 0px 50px 50px;
-  align-self: flex-end; 
-  color: white; 
-  padding: 20px; 
+  align-self: flex-end;
+  color: white;
+  padding: 10px;
   display: flex;
   align-items: center;
+  word-wrap: break-word;
 }
 
 .chat-input {
   background-color: #aaa;
   padding: 10px;
+  display: flex;
 }
 
 .chat-input input {
-  width: 80%;
+  flex: 1;
   padding: 10px;
   border: none;
   border-radius: 5px;
@@ -153,7 +153,7 @@ header {
 
 .menu__btn {
   position: fixed;
-  top: 20px;
+  top: 200px;
   left: 20px;
   width: 26px;
   height: 26px;
@@ -185,8 +185,8 @@ header {
 .menu__box {
   display: block;
   position: fixed;
-  top: 0;
-  left: -100%;
+  top: 20;
+  left: -200%;
   width: 200px;
   height: 100%;
   margin: 0;
