--- a/src/css/header.css
+++ b/src/css/header.css
@@ -87,12 +87,6 @@ header {
     gap: 5px;
 }
 
-
-
-.icon {
-    height: 25px;
-}
-
 .user_acc {
     height: 70px;
     width: 70px;
@@ -104,6 +98,7 @@ header {
     transition: .5s;
     z-index: 999;
 }
+
 
 .listUserOptions:last-child {
     border-bottom: 1px solid black;
@@ -132,12 +127,20 @@ ul {
     margin-top: 15px;
     margin-bottom: 15px;
 }
-
+.HasUsericon{
+    margin: 0px;
+    width: 100%;
+    height: 70px;
+}
 
 .personIcon {
     width: 50%;
 }
-
+.UserIcon{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
 
 button {
     cursor: pointer;
