--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,3 +63,24 @@ input[type=number] {
     height: 25px;
     pointer-events: none;
 }
+
+/* WebKit browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: black;
+    border-radius: 10px;
+    border: 2px solid #f1f1f1;
+}
+
+/* Firefox */
+html {
+    scrollbar-width: thin;
+    scrollbar-color: black #f1f1f1;
+}
