--- a/src/css/advertentieinfo.css
+++ b/src/css/advertentieinfo.css
@@ -6,7 +6,19 @@ main {
     align-items: center;
   }
 
-.mainImageBox{
+
+
+.advertentieInfoBox{
+    border-radius: 20px;
+    padding: 20px;
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: max-content auto max-content;
+    grid-template-rows: auto auto;
+    width: 80%;
+    height: min-content;
+
+}.mainImageBox{
     display: flex;
     border: 1px solid gray;
     overflow: hidden;
@@ -16,19 +28,10 @@ main {
     height: 100%;
     aspect-ratio: 1/1;
 }
-
-.advertentieInfoBox{
-    width:  80vw;
-    max-height: 500px;
-    display: grid;
-    grid-template-columns: max-content auto max-content;
-    grid-template-rows: auto auto;
-}
 .allImagesBox{
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto;
-    width: max-content;
     gap: 5px;
 }
 
@@ -36,15 +39,17 @@ main {
     display: flex;
     flex-direction: column;
     width: 370px;
+    max-width: 370px;
+    height: min-content;
 }
-.advertentieAfbeeldingBox{
+.tile{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70px;
-    aspect-ratio: 1/1;
+    width: 100%;
     overflow: hidden;
     border: 1px solid gray;
+    aspect-ratio: 1/1;
 }
 
 .mainImage{
@@ -58,7 +63,11 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    
     gap: 20px;
+    /* height: calc(100% - 3*20px); */
+    padding: 0px 20px 0 20px ;
 }
 .infoBox {
     padding: 20px;
@@ -69,7 +78,7 @@ main {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtiele schaduw voor diepte */
     position: relative;
     transition: all 0.3s ease; /* Gladde overgang voor alle veranderingen */
-    width: 80%;
+    width: 100%;
 }
 
 .beschrijving {
@@ -105,11 +114,17 @@ main {
 }
 
 
-
+.biedingsBox{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
 fieldset{
     height: 100%;
+    max-height: 500px;
     padding: 20px;
     display: flex;
+    overflow-y: scroll;
     flex-direction: column;
     gap: 5px;
     width: 300px;
@@ -168,8 +183,8 @@ legend{
 }
 .update-verwijderBtnsBox{
     grid-column: 2;
-margin-left: auto;
-margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 #verwijderAdvertentieBtn{
     padding: 20px;
@@ -179,4 +194,55 @@ margin-right: auto;
 #UpdateAdvertentieBtn{
     padding: 20px;
 
+}
+
+@media screen and (max-width: 1300px) {
+
+    .advertentieInfoBox{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: auto auto auto;
+    }
+    .afbeeldingenBoxWrapper{
+        justify-content: center;
+        width: 100%;
+        grid-column: 1/ 3;
+        display: flex;
+        align-items: center;
+    }
+    .update-verwijderBtnsBox{
+        grid-column: 1/ 3;
+    }
+}
+
+@media screen and (max-width: 900px) {
+
+    .advertentieInfoBox{
+        display: flex;
+        flex-direction: column;
+    }
+    .afbeeldingenBoxWrapper{
+        justify-content: center;
+        width: 100%;
+        grid-column: 1/ 3;
+        display: flex;
+        align-items: center;
+    }
+    .biedingsBox{
+        width: 100%;
+        padding: 20px;
+    }
+    fieldset{
+        max-width: none;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .afbeeldingenBox{
+        width: 90%;
+    }
+    .allImagesBox{
+        width: 100%;
+    }
 }
