--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,24 +19,6 @@ header {
     overflow: hidden;
 }
 
-@media screen and (max-width: 1100px) {
-    .logoTekst {
-        display: none;
-    }
-}
-
-
-@media screen and (max-width: 750px) {
-    .headerNav .navBtn {
-        display: none;
-    }
-
-    #hamburgerMenu {
-        visibility: visible;
-
-    }
-}
-
 
 .headerContent {
     display: grid;
@@ -165,6 +147,9 @@ button {
     transition: .5s;
 
 }
+.sidebar .navBtn{
+    height: 100%;
+}
 
 .sidebarOpen {
     display: block;
@@ -183,4 +168,43 @@ button {
     position: absolute;
     top: 10px;
     left: 10px;
+}
+
+
+.headerContent .bedrijfsnaam{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border-bottom: 1px solid black;
+    padding: 0px;
+    color: black;
+    text-decoration: none;
+}
+
+.headerContent .bedrijfsnaam img{
+    height: 16px;
+}
+
+@media screen and (max-width: 1250px) {
+    .logoTekst {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 950px) {
+    .headerNav .navBtn {
+        display: none;
+    }
+
+    #hamburgerMenu {
+        visibility: visible;
+
+    }
+
+    .headerContent .bedrijfsnaam{
+        position: absolute;
+        top: 90px;
+        right: 30px;
+    }
 }
