--- a/src/css/sorteblegrid.css
+++ b/src/css/sorteblegrid.css
@@ -26,6 +26,32 @@
     display: none;
 }
 
+.tile {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    border: 1px solid lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.tile span {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20px;
+    height: 20px;
+    padding: 1px;
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 100px;
+    color: white;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+}
+
 .tile img {
     max-width: 100%;
     max-height: 100%;
@@ -36,3 +62,4 @@
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+
