--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,6 +19,24 @@ header {
     overflow: hidden;
 }
 
+@media screen and (max-width: 1100px) {
+    .logoTekst {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 750px) {
+    .headerNav .navBtn {
+        display: none;
+    }
+
+    #hamburgerMenu {
+        visibility: visible;
+
+    }
+}
+
 
 .headerContent {
     display: grid;
@@ -69,6 +87,12 @@ header {
     gap: 5px;
 }
 
+
+
+.icon {
+    height: 25px;
+}
+
 .user_acc {
     height: 70px;
     width: 70px;
@@ -80,7 +104,6 @@ header {
     transition: .5s;
     z-index: 999;
 }
-
 
 .listUserOptions:last-child {
     border-bottom: 1px solid black;
@@ -109,20 +132,12 @@ ul {
     margin-top: 15px;
     margin-bottom: 15px;
 }
-.HasUsericon{
-    margin: 0px;
-    width: 100%;
-    height: 70px;
-}
+
 
 .personIcon {
     width: 50%;
 }
-.UserIcon{
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-}
+
 
 button {
     cursor: pointer;
@@ -147,9 +162,6 @@ button {
     transition: .5s;
 
 }
-.sidebar .navBtn{
-    height: 100%;
-}
 
 .sidebarOpen {
     display: block;
@@ -168,43 +180,4 @@ button {
     position: absolute;
     top: 10px;
     left: 10px;
-}
-
-
-.headerContent .bedrijfsnaam{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    border-bottom: 1px solid black;
-    padding: 0px;
-    color: black;
-    text-decoration: none;
-}
-
-.headerContent .bedrijfsnaam img{
-    height: 16px;
-}
-
-@media screen and (max-width: 1250px) {
-    .logoTekst {
-        display: none;
-    }
-}
-
-
-@media screen and (max-width: 950px) {
-    .headerNav .navBtn {
-        display: none;
-    }
-
-    #hamburgerMenu {
-        visibility: visible;
-
-    }
-
-    .headerContent .bedrijfsnaam{
-        position: absolute;
-        top: 90px;
-        right: 30px;
-    }
 }
