--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #888;
+  background-color: #333333;
 }
 
 main{
@@ -30,12 +30,12 @@ main{
   font-weight: bold;
 }
 
-.sidebar {
-  background-color: #444444;
+/* .sidebar {
+  background-color: #F0F0F0;
   display: flex;
   flex-direction: column;
   padding: 10px;
-}
+} */
 
 .sidebar-item {
   background-color: #bbb;
@@ -47,28 +47,29 @@ main{
   flex: end;
   width: 100vh;
   height: 95vh;
-  background-color: #e0e0e0;
+  background-color: #F0F0F0;
   display: flex;
   flex-direction: column;
 }
 
 .chat-header {
-  background-color: #999;
+  background-color: #6f6f6f;
   padding: 20px;
   text-align: center;
 }
 
-.chat-content {
-  flex: 1;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  overflow-y: scroll;
-  height: 20vh;
-}
+  .chat-content {
+    flex: 1;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow-y: scroll;
+    /* overflow-y: auto; */
+    height: 20vh;
+  }
 
-.chat-bubble {
+/* .chat-bubble {
   width: auto;
   max-width: 50v0px;
   height: auto;
@@ -81,11 +82,12 @@ main{
   align-items: center;
   word-wrap: break-word;
   margin-top: 2vh;
-}
+} */
 
 .chat-bubble {
 width: max-content;
-max-width: 500px; 
+height: max-content;
+max-width: 5000px; 
 height: auto;
 background-color: #000;
 border-radius: 0px 50px 50px 50px;
@@ -100,7 +102,7 @@ margin-top: 2vh;
 
 .chat-bubble2 {
   width: max-content;
-  max-width: 500px; 
+  max-width: 5000px; 
   height: auto;
   background-color: #000;
   border-radius: 50px 0px 50px 50px;
@@ -113,9 +115,10 @@ margin-top: 2vh;
 }
 
 .chat-input {
-  background-color: #aaa;
+  background-color: #6f6f6f;
   padding: 10px;
   display: flex;
+  gap: 10px;
 }
 
 .chat-input input {
@@ -126,8 +129,9 @@ margin-top: 2vh;
 }
 
 .button {
-  background-color: #000;
+  background-color: #333333;
   border-radius: 10px;
+  width: 70px;
   padding: 10px;
   color: #fff;
 }
@@ -168,9 +172,10 @@ margin-top: 2vh;
   display: flex;
   align-items: start;
   padding: 5vh 3vh;
-  background-color: #000;
+  background-color: #333333;
   gap: 10px;
   flex-direction:column;
   overflow-y: scroll;
   height: 95vh;
+  width: 40vh;
 }
